add api endpoint to add assets to TimelineGroup
